--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form-->
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://sisilogin.testeveonline.com/oauth/authorize/?response_type=code&redirect_uri=http://localhost:8080/#/auth&client_id=bef0bb70a1d0430981755636671fcb93&scope=&state="><img src="https://images.contentful.com/idjq7aai9ylm/12vrPsIMBQi28QwCGOAqGk/33234da7672c6b0cdca394fc8e0b1c2b/EVE_SSO_Login_Buttons_Small_Black.png?w=195&amp;h=30" alt="EVE SSO Login Buttons Small Black"></a>
+                    <li><a href="https://sisilogin.testeveonline.com/oauth/authorize/?response_type=code&redirect_uri=https://bershadskiy.github.io/#/auth&client_id=bef0bb70a1d0430981755636671fcb93&scope=&state="><img src="https://images.contentful.com/idjq7aai9ylm/12vrPsIMBQi28QwCGOAqGk/33234da7672c6b0cdca394fc8e0b1c2b/EVE_SSO_Login_Buttons_Small_Black.png?w=195&amp;h=30" alt="EVE SSO Login Buttons Small Black"></a>
                     </li>
                     <!-- <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
