--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/">CrestViewer</a>
+                <a class="navbar-brand" href="#/">GeCoCash</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,7 +39,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/#/regions">Regions</a>
                     </li>
-                    <li><a href="#">Link</a>
+                    <li><a href="/#/about">About</a>
                     </li>
                     <!--li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -66,7 +66,7 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form-->
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://sisilogin.testeveonline.com/oauth/authorize/?response_type=code&redirect_uri=http://bershadskiy.github.io/#/auth&client_id=bef0bb70a1d0430981755636671fcb93&scope=&state="><img src="https://images.contentful.com/idjq7aai9ylm/12vrPsIMBQi28QwCGOAqGk/33234da7672c6b0cdca394fc8e0b1c2b/EVE_SSO_Login_Buttons_Small_Black.png?w=195&amp;h=30" alt="EVE SSO Login Buttons Small Black"></a>
+                    <li><a ng-click="goAuth()"><img src="https://images.contentful.com/idjq7aai9ylm/12vrPsIMBQi28QwCGOAqGk/33234da7672c6b0cdca394fc8e0b1c2b/EVE_SSO_Login_Buttons_Small_Black.png?w=195&amp;h=30" alt="EVE SSO Login Buttons Small Black"></a>
                     </li>
                     <!-- <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -103,6 +103,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular-route.min.js"></script>
 
     <script src="app.js" type="text/javascript"></script>
+    <script src="controller.js" type="text/javascript"></script>
+    <script src="factory.js" type="text/javascript"></script>
 
 
 </body>
