--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body ng-app="crestviewer" class="container-fluid bg-primary">
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" ng-controller="navController">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -66,7 +66,7 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form-->
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a ng-click="goAuth()"><img src="https://images.contentful.com/idjq7aai9ylm/12vrPsIMBQi28QwCGOAqGk/33234da7672c6b0cdca394fc8e0b1c2b/EVE_SSO_Login_Buttons_Small_Black.png?w=195&amp;h=30" alt="EVE SSO Login Buttons Small Black"></a>
+                    <li ng-click="goAuth()"><img src="https://images.contentful.com/idjq7aai9ylm/12vrPsIMBQi28QwCGOAqGk/33234da7672c6b0cdca394fc8e0b1c2b/EVE_SSO_Login_Buttons_Small_Black.png?w=195&amp;h=30" alt="EVE SSO Login Buttons Small Black">
                     </li>
                     <!-- <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -105,8 +105,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular-route.min.js"></script>
 
     <script src="app.js" type="text/javascript"></script>
-    <script src="controller.js" type="text/javascript"></script>
     <script src="factory.js" type="text/javascript"></script>
+    <script src="controller.js" type="text/javascript"></script>
 
 
 </body>
